--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,7 +1,7 @@
-@import "./variables";
-@import "./libs/normalize";
+@import './variables';
+@import './libs/normalize';
 
-@import "./components/all";
+@import './components/all';
 
 body {
   background-color: $background;
@@ -15,7 +15,6 @@ body {
   border-radius: 10px;
   max-width: 1400px;
 
-  
   @media (max-width: 645px) {
     width: calc(100vw - 30px);
     margin-top: 15px;
@@ -25,21 +24,21 @@ body {
 .content {
   padding: 40px 0;
 
-&__error-info {
-  margin: 100px auto;
-  width: 500px;
-  text-align: center;
+  &__error-info {
+    margin: 100px auto;
+    width: 500px;
+    text-align: center;
 
-  h2 {
-    font-size: 32px;
-    font-weight: 700;
-    margin-bottom: 10px;
-  }
+    h2 {
+      font-size: 32px;
+      font-weight: 700;
+      margin-bottom: 10px;
+    }
 
-  p {
-    font-size: 20px;
+    p {
+      font-size: 20px;
+    }
   }
-}
 
   &__title {
     font-weight: 800;
@@ -177,7 +176,7 @@ body {
       }
     }
   }
- 
+
   .content__items {
     display: block;
   }
@@ -230,6 +229,25 @@ body {
         svg {
           path:first-of-type {
             display: none;
+          }
+        }
+        &--disabled {
+          opacity: 0.4;
+          border-color: #787878;
+
+          &:active {
+            transform: none;
+          }
+
+          &:hover {
+            background-color: transparent;
+
+            svg path {
+              fill: #787878;
+            }
+          }
+          svg path {
+            fill: #787878;
           }
         }
       }
